--- a/SpotifyWorkspace.ipynb
+++ b/SpotifyWorkspace.ipynb
@@ -1431,7 +1431,8 @@
    "id": "05a101fb-f242-44de-8f17-cb9a8fcdd212",
    "metadata": {},
    "source": [
-    "# **Initial Visualizations**"
+    "# Initial Visualizations
+Note: These visualizations are not necessasrily loading properly in the "preview" panel of GH, but will work when viewed in the full notebook"
    ]
   },
   {
