--- a/SpotifyWorkspace.ipynb
+++ b/SpotifyWorkspace.ipynb
@@ -1431,8 +1431,8 @@
    "id": "05a101fb-f242-44de-8f17-cb9a8fcdd212",
    "metadata": {},
    "source": [
-    "# Initial Visualizations",
-        "Note: we are seeing that these visualizations are not loading well in the Preview view of GitHub, but are loading when fully running the notebook."
+    "# Initial Visualizations\n",
+    "Note: we are seeing that these visualizations are not loading well in the Preview view of GitHub, but are loading when fully running the notebook."
 
    ]
   },
