--- a/SpotifyWorkspace.ipynb
+++ b/SpotifyWorkspace.ipynb
@@ -46,7 +46,7 @@
    "id": "42a37aa5-006b-4147-ac53-c9f68316bc91",
    "metadata": {},
    "source": [
-    "**Import Data**"
+    "# Import Data"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "id": "052652b8-f601-46ea-913c-00627d2892cd",
    "metadata": {},
    "source": [
-    "**Initial Exploration**"
+    "# Initial Exploration"
    ]
   },
   {
@@ -402,7 +402,7 @@
    "id": "179d15b1-ba1b-4a5c-ad52-6acf2ba93f6d",
    "metadata": {},
    "source": [
-    "**Descriptive Statistics for Select Fields**"
+    "# Descriptive Statistics for Select Fields"
    ]
   },
   {
